--- a/tache/Cargo.toml
+++ b/tache/Cargo.toml
@@ -13,6 +13,7 @@ time = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_yaml = "0.8"
+serde_json = "1.0.40"
 signal = "0.6"
 libc = "0.2"
 rand = "0.6"
@@ -26,7 +27,12 @@ ring = "0.14"
 base-62 = "0.1"
 http = "0.1"
 http-body = "0.2.0-alpha.1"
-async-std = "0.99"
+tokio = "0.2.0-alpha.4"
+bytes = "0.4"
+num_cpus = "1.8.0"
+futures-preview = "=0.3.0-alpha.18"
+futures-util-preview = "=0.3.0-alpha.18"
+httparse = "1.0"
 
 [build-dependencies]
 rustc_tools_util = "0.2.0"
