--- a/tache/Cargo.toml
+++ b/tache/Cargo.toml
@@ -4,16 +4,24 @@ version = "0.1.0"
 authors = ["zhsyourai <mysoftzhs@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "tache"
+
+[[bin]]
+name = "tachelocal"
+path = "src/bin/local.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = "2.33.0"
 log = { version = "0.4", features = ["std"] }
 time = "0.1"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 serde_json = "1.0.40"
+serde_urlencoded = "0.6.1"
+url = "2.0"
 signal = "0.6"
 libc = "0.2"
 rand = "0.6"
@@ -33,6 +41,17 @@ num_cpus = "1.8.0"
 futures-preview = "=0.3.0-alpha.18"
 futures-util-preview = "=0.3.0-alpha.18"
 httparse = "1.0"
+lru-cache = "0.1"
+dns-parser = "0.8"
+trust-dns-resolver = { version = "0.11", features = ["dns-over-rustls", "dns-over-https-rustls"] }
+json5 = "0.2"
+base64 = "0.10"
 
 [build-dependencies]
 rustc_tools_util = "0.2.0"
+
+[target.'cfg(unix)'.dependencies]
+tokio-signal = "0.2"
+
+[target.'cfg(windows)'.dependencies]
+tokio-signal = "0.2"
