--- a/tache/Cargo.toml
+++ b/tache/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/bin/local.rs"
 [dependencies]
 clap = "2.33.0"
 log = { version = "0.4", features = ["std"] }
+env_logger = "0.6"
 time = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
@@ -31,27 +32,21 @@ yaml-rust = "0.4"
 igd = "^0.8.2"
 siphasher = "0.3"
 daemonize = "0.3"
-ring = "0.14"
+ring = "^0.16"
 base-62 = "0.1"
 http = "0.1"
 http-body = "0.2.0-alpha.1"
-tokio = "0.2.0-alpha.4"
+tokio = { version = "0.2.0-alpha.4", features = ["default", "signal"] }
 bytes = "0.4"
 num_cpus = "1.8.0"
-futures-preview = "=0.3.0-alpha.18"
-futures-util-preview = "=0.3.0-alpha.18"
+futures-preview = "0.3.0-alpha.18"
+futures-util-preview = "0.3.0-alpha.18"
 httparse = "1.0"
 lru-cache = "0.1"
 dns-parser = "0.8"
-trust-dns-resolver = { version = "0.11", features = ["dns-over-rustls", "dns-over-https-rustls"] }
+trust-dns-resolver = { version = "^0.12", features = ["dns-over-rustls", "dns-over-https-rustls"] }
 json5 = "0.2"
 base64 = "0.10"
 
 [build-dependencies]
 rustc_tools_util = "0.2.0"
-
-[target.'cfg(unix)'.dependencies]
-tokio-signal = "0.2"
-
-[target.'cfg(windows)'.dependencies]
-tokio-signal = "0.2"
