--- a/tache/Cargo.toml
+++ b/tache/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/bin/local.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+byteorder = "1.3.2"
 clap = "2.33.0"
 log = { version = "0.4", features = ["std"] }
 env_logger = "0.6"
