--- a/tache/examples/config.yaml
+++ b/tache/examples/config.yaml
@@ -1,5 +1,5 @@
 # Rule / Global/ Direct (default is Rule)
-mode: Rule
+mode: rule
 
 # set log level to stdout (default is info)
 # info / warning / error / debug / silent
@@ -17,7 +17,7 @@ api:
 dns:
   ipv6: false # default is false
   listen: 0.0.0.0:53
-  enhanced-mode: redir-host # or fake-ip
+  mode: redir-host # or fake-ip
   # fake-ip-range: 198.18.0.1/16 # if you don't know what it is, don't change it
   servers:
     - 114.114.114.114
@@ -37,59 +37,59 @@ inbounds:
     #  - "user1:pass1"
     #  - "user2:pass2"
 
-  # port of SOCKS5
-  - name: socks1
-    kind: socks
-    listen: 0.0.0.0:8902
-    #authentication:
-    #  - "user1:pass1"
-    #  - "user2:pass2"
-
-  # redir port for Linux and macOS
-  - name: redir1
-    kind: redir
-    listen: 0.0.0.0:8903
-
-  # tun interface
-  - name: tun1
-    kind: tun
+#  # port of SOCKS5
+#  - name: socks1
+#    kind: socks5
+#    listen: 0.0.0.0:8902
+#    #authentication:
+#    #  - "user1:pass1"
+#    #  - "user2:pass2"
+#
+#  # redir port for Linux and macOS
+#  - name: redir1
+#    kind: redir
+#    listen: 0.0.0.0:8903
+#
+#  # tun interface
+#  - name: tun1
+#    kind: tun
 
 proxies:
   # shadowsocks
   # The kinds of cipher are consistent with go-shadowsocks2
   # support AEAD_AES_128_GCM AEAD_AES_192_GCM AEAD_AES_256_GCM AEAD_CHACHA20_POLY1305 AES-128-CTR AES-192-CTR AES-256-CTR AES-128-CFB AES-192-CFB AES-256-CFB CHACHA20-IETF XCHACHA20
   # In addition to what go-shadowsocks2 supports, it also supports chacha20 rc4-md5 xchacha20-ietf-poly1305
-  - { name: "ss1", kind: ss, address: server, cipher: AEAD_CHACHA20_POLY1305, password: "password", udp: true }
+  - { name: "ss1", kind: shadowsocks, address: server:2019, cipher: AEAD_CHACHA20_POLY1305, password: "password", udp: true }
 
   # vmess
   # cipher support auto/aes-128-gcm/chacha20-poly1305/none
-  - { name: "vmess", kind: vmess, address: server, uuid: uuid, alterId: 32, cipher: auto }
+  - { name: "vmess", kind: vmess, address: server:2019, uuid: uuid, alterId: 32, cipher: auto }
   # with tls
-  - { name: "vmess", kind: vmess, address: server, uuid: uuid, alterId: 32, cipher: auto, tls: true }
+  - { name: "vmess", kind: vmess, address: server:2019, uuid: uuid, alterId: 32, cipher: auto, tls: true }
   # with tls and skip-cert-verify
-  - { name: "vmess", kind: vmess, address: server, uuid: uuid, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true }
+  - { name: "vmess", kind: vmess, address: server:2019, uuid: uuid, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true }
   # with ws-path and ws-headers
-  - { name: "vmess", kind: vmess, address: server, uuid: uuid, alterId: 32, cipher: auto, network: ws, ws-path: /path, ws-headers: { Host: v2ray.com } }
+  - { name: "vmess", kind: vmess, address: server:2019, uuid: uuid, alterId: 32, cipher: auto, network: ws, ws-path: /path, ws-headers: { Host: v2ray.com } }
   # with ws + tls
-  - { name: "vmess", kind: vmess, address: server, uuid: uuid, alterId: 32, cipher: auto, network: ws, ws-path: /path, tls: true }
+  - { name: "vmess", kind: vmess, address: server:2019, uuid: uuid, alterId: 32, cipher: auto, network: ws, ws-path: /path, tls: true }
 
   # socks5
-  - { name: "socks", kind: socks5, address: server }
+  - { name: "socks", kind: socks5, address: server:2019 }
   # socks5 with authentication
-  - { name: "socks", kind: socks5, address: server, username: "username", password: "password" }
+  - { name: "socks", kind: socks5, address: server:2019, username: "username", password: "password" }
   # with tls
-  - { name: "socks", kind: socks5, address: server, tls: true }
+  - { name: "socks", kind: socks5, address: server:2019, tls: true }
   # with tls and skip-cert-verify
-  - { name: "socks", kind: socks5, address: server, tls: true, skip-cert-verify: true }
+  - { name: "socks", kind: socks5, address: server:2019, tls: true, skip-cert-verify: true }
 
   # http
-  - { name: "http", kind: http, address: server }
+  - { name: "http", kind: http, address: server:2019 }
   # http with authentication
-  - { name: "http", kind: http, address: server, username: "username", password: "password" }
+  - { name: "http", kind: http, address: server:2019, username: "username", password: "password" }
   # with tls (https)
-  - { name: "http", kind: http, address: server, tls: true }
+  - { name: "http", kind: http, address: server:2019, tls: true }
   # with tls (https) and skip-cert-verify
-  - { name: "http", kind: http, address: server, tls: true, skip-cert-verify: true }
+  - { name: "http", kind: http, address: server:2019, tls: true, skip-cert-verify: true }
 
 proxy-groups:
   # url-test select which proxy will be used by benchmarking speed to a URL.
@@ -102,16 +102,16 @@ proxy-groups:
   - { name: "load-balance", kind: load-balance, proxies: ["ss1", "ss2", "vmess1"], url: "http://www.gstatic.com/generate_204", interval: 300 }
 
 rules:
-  - { kind: "DOMAIN-SUFFIX", params: ["google.com"], target: auto }
-  - { kind: "DOMAIN-KEYWORD", params: ["google"], taget: auto }
-  - { kind: "DOMAIN", params: ["google.com"], target: auto}
-  - { kind: "DOMAIN-SUFFIX", params: ["ad.com"], target: REJECT}
-  - { kind: "IP-CIDR", params: ["127.0.0.0/8"], target: DIRECT}
+  - { kind: "DOMAIN-SUFFIX", source: ["http1", "socks1"], params: ["google.com"], target: auto }
+  - { kind: "DOMAIN-KEYWORD", source: ["http1", "socks1"], params: ["google"], target: auto }
+  - { kind: "DOMAIN", source: ["http1", "socks1"], params: ["google.com"], target: auto}
+  - { kind: "DOMAIN-SUFFIX",source: ["http1", "socks1"], params: ["ad.com"], target: REJECT}
+  - { kind: "IP-CIDR", source: ["http1", "socks1"], params: ["127.0.0.0/8"], target: DIRECT}
   # rename SOURCE-IP-CIDR and would remove after prerelease
-  - { kind: "SRC-IP-CIDR", params: ["192.168.1.201/32"], target: DIRECT}
-  - { kind: "GEOIP", params: ["CN"], target: DIRECT}
-  - { kind: "DST-PORT", params: [80], target: DIRECT}
-  - { kind: "SRC-PORT", params: [7777], target: DIRECT}
+  - { kind: "SRC-IP-CIDR", source: ["http1", "socks1"], params: ["192.168.1.201/32"], target: DIRECT}
+  - { kind: "GEOIP", source: ["http1", "socks1"], params: ["CN"], target: DIRECT}
+  - { kind: "DST-PORT", source: ["http1", "socks1"], params: [80], target: DIRECT}
+  - { kind: "SRC-PORT", source: ["http1", "socks1"], params: [7777], target: DIRECT}
   # FINAL would remove after prerelease
   # you also can use `FINAL,Proxy` or `FINAL,,Proxy` now
-  - { kind: "MATCH", target: auto}
+  - { kind: "MATCH", source: ["http1", "socks1"], target: auto}
