--- a/tache/Cargo.toml
+++ b/tache/Cargo.toml
@@ -18,6 +18,11 @@ actix = "0.8.3"
 actix-net = {version = "0.2.6", features = ["rust-tls"]}
 actix-web = "1.0.7"
 actix-service = "0.4.2"
+actix-http = "0.2.10"
+actix-server = "0.6.0"
+actix-server-config = "0.1.2"
+net2 = "0.2"
+bitflags = "1.1.0"
 byteorder = "1.3.2"
 clap = "2.33.0"
 log = { version = "0.4", features = ["std"] }
